# PTCA

./: .gitignore  CLAUDE.md  pyproject.toml
prime_core/: CLAUDE.md  __init__.py  constants.py  core.py  fiq.py
prime_core/tests/: test_constants_coherence_prime.py  test_fiq_opaque.py  test_ptca_core_stratified.py
ptca/: __init__.py  instance.py  primes.py  tensor.py
tests/: test_constants.py  test_exchange.py  test_instance.py  test_primes.py  test_provenance.py  test_sentinels.py  test_tensor.py
