[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ptca-lib"
version = "0.1.0"
description = "PTCA — Probabilistic Tensor Context Architecture: sentinel channels, prime-node tensor, provenance hashing, and exchange mechanics"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/erinepshovel-code/a0"

[tool.setuptools.packages.find]
where = ["."]
include = ["ptca*"]
