[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ptca-lib"
version = "0.1.0"
description = "PTCA — Prime Tensor Core Architecture: sentinel channels, prime-node tensor, provenance hashing, and exchange mechanics"
readme = "README.md"
license = { text = "MPL-2.0" }
authors = [
  { name = "Erin Patrick Spencer", email = "wayseer@interdependentway.org" },
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/The-Interdependency/PTCA"
Repository = "https://github.com/The-Interdependency/PTCA"

[tool.setuptools.packages.find]
where = ["." ]
include = ["ptca*"]
